--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,7 @@ a {
   text-decoration: none;
   font-weight: 400;
   font-size: 14px;
+  transition: 0.3;
 }
 
 a:hover {
@@ -40,6 +41,10 @@ a:hover {
 .logo {
   width: 125px;
   height: 125px;
+}
+
+.logo:hover {
+  cursor: pointer;
 }
 
 .home {
@@ -81,11 +86,11 @@ a:hover {
   color: white;
   border: 0;
   height: 40px;
-  width: 80px;
+  width: 100px;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 18px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -102,6 +107,34 @@ a:hover {
   color: white;
   text-align: center;
   padding-bottom: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 425px;
+  margin-right: 425px;
+}
+
+.signup input {
+  width: 200px;
+  height: 30px;
+}
+
+.signup button {
+  color: white;
+  background-color: #0e0231;
+  border: 0;
+  height: 40px;
+  width: 100px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  transition: 0.3s;
+}
+
+.signup button:hover {
+  background-color: rgb(0, 254, 203, .6);
 }
 
 .mountains {
