--- a/client/src/App.css
+++ b/client/src/App.css
@@ -204,6 +204,30 @@ a:hover {
 
 .column {
   flex: 20%;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+}
+
+.column button {
+  width: 155px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  background-color: whitesmoke;
+  height: 40px;
+  font-weight: 300;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: auto;
+}
+
+.column input {
+  margin: auto;
+}
+
+.column button:hover {
+  background-color: rgb(0, 254, 203, .6);
 }
 
 .submit-button {
@@ -214,5 +238,19 @@ a:hover {
 }
 
 #delete-button {
-  text-align: center;
+  width: 130px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  background-color: whitesmoke;
+  height: 40px;
+  font-weight: 300;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-top: auto;
+  margin-right: 1rem;
+}
+
+#delete-button:hover {
+  background-color: rgb(0, 254, 203, .6);
 }
